--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-VUE_APP_PROJECT = "https://github.com/CareyWang/sub-web"
+VUE_APP_PROJECT = "https://github.com/gitzixuan/sub-web"
 
 VUE_APP_BOT_LINK = "https://t.me/CareyWong_bot"
 
-VUE_APP_BACKEND_RELEASE = "https://github.com/tindy2013/subconverter/releases"
+VUE_APP_BACKEND_RELEASE = "https://github.com/gitzixuan/subconverter"
 
-VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/tindy2013/subconverter/master/base/config/example_external_config.ini"
+VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://raw.githubusercontent.com/gitzixuan/subconverter/master/base/config/example_external_config.ini"
 
 # API 后端
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://api.wcc.best"
